[project]
name = "alien-invasion"
version = "1.0.0"
description = "A classic Alien Invasion arcade-style game built with Pygame"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Mahmudul Robin", email = "captain-nimo@github.com"}
]
keywords = ["game", "pygame", "arcade"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pygame>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/captain-nimo/alien-invasion"
Repository = "https://github.com/captain-nimo/alien-invasion.git"
Issues = "https://github.com/captain-nimo/alien-invasion/issues"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.uv]
python-version = "3.9"

